# Computer-Network-Project

./: .gitignore  README.md  config.yaml  instruction.md  pyproject.toml  requirements.txt
model/: __init__.py  model.py
scripts/: run_system_integration_tests.bat  run_system_integration_tests.ps1  test_system_integration.py
src/: Proxy.py  dashboard.py  realtime_inference.py  runtime_config.py
src-base/: README.md  WIRESHARK_GUIDE.md  config.py  dashboard.py  data_preprocessing.py  jitter_test.py  model.py  realtime_inference.py  requirements.txt  train_model.py  visualization.py
src-trained/: Proxy.py  TEST_PLAN.md  config.py  config.yaml  dashboard.py  data_preprocessing.py  feature_extraction.py  realtime_inference.py  requirements.txt  run_tests.bat  runtime_config.py  test_integration_stress.py  test_validation.py  train_experiment.py  train_improved.py  train_log.txt  train_model.py  training_log.txt
test/: test_system_integration.py
