[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "encrypted-traffic-monitor"
version = "0.1.0"
description = "Computer networks course project for encrypted traffic identification and monitoring."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
    "torch>=2.0.0",
    "streamlit>=1.25.0",
    "plotly>=5.15.0",
    "scapy>=2.5.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "psutil>=5.9.0",
]

[tool.setuptools]
py-modules = []
